# AMX-matmul

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  amx.amx_matrix.h  amx.benchmark.h  amx.gen.h  amx.matrix.h  amx.print.h  amx.test.h  amx.test_data.h  amx.tile.h  amx.tile_array.h  amx.tile_config.h  amx.tmul.ref.h  amx.tmul.skl.h  amx.tmul.spr.h  amx.tools.h  amx.transpose.h  amx.types.h  amx.vecmul.h  example.deep1b.h  example.vecmul.h  main.cpp  readme.txt  run-sde.bat  spec_tdpbf16ps_1tile.txt  str.h  tools.timing.h  vecmul_example.h
AmxMulWin/: AmxMulWin.sln  AmxMulWin.vcxproj  AmxMulWin.vcxproj.filters
experiments/: benchmark.csv
